--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>"
+<head>
+    <link rel="icon" type="image/png" href="zzz.png">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
@@ -11,7 +12,7 @@
 </head>
 <body>
     <div style="text-align: center;">
-    <h1>Lista de Compra</h1>
+    <h1>Listas</h1>
     <input type="text" id="nome" placeholder="Nome"> &nbsp;
     <input type="text" id="profissao" placeholder="Profissão"> <br><br><br>
     <button onclick="adc()">Adicionar</button> &nbsp;
